[package]
name = "ts3-who"
version = "0.1.0"
description = "See who is online in an teamspeak server"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"

[dependencies]
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tsclientlib = { git = "https://github.com/ReSpeak/tsclientlib" }

[profile.release]
lto = true
